// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`not render when false 1`] = `null`;

exports[`render element when true 1`] = `
<span>
  <span>
    sdfsdf
  </span>
</span>
`;

exports[`render string when true 1`] = `
<span>
  Test
</span>
`;
